# nebula

./: .gitignore  LICENSE  README.md  capacitor.config.ts  codemagic.yaml  eslint.config.js  index.html  package-lock.json  package.json  release.ts  tsconfig.mobile.json  vite.config.ts  vite.mobile.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  BUILD_WEEK.md  DEVPOST_SUBMISSION.md  IOS_NATIVE.md  MOBILE_PWA.md  NEBULA_2_WORKFLOW.md  NEBULA_VIDEO_SCRIPT.md  RELEASE_2.0.md  skills.md
mobile/: index.html
mobile/src/: App.tsx  MobileSettingsScreen.tsx  api.test.ts  api.ts  idb.ts  main.tsx  messageDisplay.test.ts  messageDisplay.ts  mobileSettings.test.ts  mobileSettings.ts  platform.ts  styles.css  types.ts  useMobileViewport.native.test.tsx  useMobileViewport.test.ts  useMobileViewport.ts  voice.ts
native/secure-storage/: Package.swift  package.json
native/voice/: Package.swift  package.json
public/: mobile-manifest.webmanifest  mobile-sw.js
release/: Nebula_2.0.0_x64-setup.exe.sha256
scripts/: mobile_visual_smoke.mjs  validate_ios_project.mjs
src/: AmbientOverlayApp.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mobile_bridge.rs  storage.rs
src/components/: AgentActivityPanel.tsx  ChatPanel.tsx  (+53 more)
training/: Nebula_Gemma_7B_QLoRA_Colab.ipynb  Nebula_Qwen2_5_Coder_7B_100K_QLoRA_Colab.ipynb  Nebula_Qwen3_4B_Cyber_QLoRA_Colab.ipynb  Nebula_Qwen_1_5B_QLoRA_Colab.ipynb  README.md  nebula-tool-trace.example.jsonl  requirements-qlora.txt
(+170 files in other folders)
