[package]
name = "nebula"
version = "2.0.0"
description = "Nebula local AI assistant"
authors = ["Nebula"]
edition = "2021"

[lib]
name = "jonard_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "process"] }
async-stream = "0.3"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.6", features = ["cors"] }
